--- a/Website for hair solutions/Index.html
+++ b/Website for hair solutions/Index.html
@@ -27,7 +27,7 @@
 
   </div>  
  </header>
-<h1>hello yes no no no no</h1>
+<h1>hello yes </h1>
     <script src = "Main.js"></script>
 </body>
 </html>
