--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
 
   </div>  
  </header>
-<h1>hi its me mariooooo. YYEYEYE</h1>
+<h1>hi its me mariooooo.</h1>
     <script src = "Main.js"></script>
 </body>
 </html>
