--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,9 @@
 
   </div>  
  </header>
+ <div class="container">
 <h1>hi its me mariooooo.</h1>
+</div>
     <script src = "Main.js"></script>
 </body>
 </html>
