--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,7 @@
     <title>Innovative hair solution problems</title>
     <link rel="stylesheet" href="Main.css">
     <link rel="stylesheet" href="Secondary.css">
+    <link rel ="website icon" type="img"href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSlaqDZpK6GvIlfEDGMsHHvlAWgDt4WXYCL0w&s">
 </head>
 <body>
     
