--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
 
   </div>  
  </header>
- <div class="container">
+ <div class="container2">
 <h1>hi its me mariooooo.</h1>
 </div>
     <script src = "Main.js"></script>
