--- a/Index.html
+++ b/Index.html
@@ -29,8 +29,9 @@
   </div>  
  </header>
  <div class="container2">
-<h1>hi</h1>
+<h1>hi safhjkasbfghjagfhjsagyujfywuyiqwuiwyeioqwueiqwioq</h1>
 </div>
+<div class="maintext"><h1>Hello </h1></div>
     <script src = "Main.js"></script>
 </body>
 </html>
